@@ -42,6 +42,20 @@ sub runtests {
     $report->_start_benchmark;
     my @test_classes = $self->test_classes;
 
+    my @bad = grep { !$_->isa('Test::Class::Moose') } @test_classes;
+    if (@bad) {
+        my $msg = 'Found the following class';
+        $msg .= 'es' if @bad > 1;
+        $msg
+          .= ' that '
+          . ( @bad > 1 ? 'are'        : 'is' ) . ' not '
+          . ( @bad > 1 ? 'subclasses' : 'a subclass' )
+          . " of Test::Class::Moose: @bad";
+        $msg .= ' (did you load '
+          . ( @bad > 1 ? 'these classes' : 'this class' ) . '?)';
+        die $msg;
+    }
+
     context_do {
         my $ctx = shift;
 
